--- a/drift-server/src/main/java/io/drift/ui/app/page/layout/MainLayout.html
+++ b/drift-server/src/main/java/io/drift/ui/app/page/layout/MainLayout.html
@@ -1,17 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<!-- Required meta tags -->
 		<meta charset="utf-8" />
-		<meta name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-		<link rel="stylesheet"
-			href="https://bootswatch.com/4/superhero/bootstrap.min.css"
-		/>
-		<title>drift</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<title>Drift Server</title>
 	</head>
 	<body>
-			<wicket:child />
+		<wicket:child />
 	</body>
 </html>				
