--- a/drift-runtime/drift-runtime-springboot/src/main/java/io/drift/ui/app/page/layout/MainLayout.html
+++ b/drift-runtime/drift-runtime-springboot/src/main/java/io/drift/ui/app/page/layout/MainLayout.html
@@ -9,11 +9,33 @@
               crossorigin="anonymous">
     </head>
     <body>
-        <div>
-            <div wicket:id="menu"/>
-            <div>
+        <div class="d-flex" id="wrapper">
+
+            <!-- Sidebar -->
+            <div class="bg-light border-right" id="sidebar-wrapper">
+                <div class="sidebar-heading"></div>
+                <div class="list-group list-group-flush">
+                    <a href="/system" class="list-group-item list-group-item-action bg-light">System</a>
+                    <a href="/recordings" class="list-group-item list-group-item-action bg-light">Recordings</a>
+                </div>
+            </div>
+            <!-- /#sidebar-wrapper -->
+
+            <!-- Page Content -->
+            <div id="page-content-wrapper">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <button id="menu-toggle" class="btn" style="outline: none; box-shadow: none;"><i class="fa fa-bars" ></i></button>
+                </nav>
                 <wicket:child/>
             </div>
         </div>
+
+        <!-- Menu Toggle Script -->
+        <script>
+            $("#menu-toggle").click(function(e) {
+                e.preventDefault();
+                $("#wrapper").toggleClass("toggled");
+            });
+        </script>
     </body>
 </html>				
