--- a/drift-runtime/drift-runtime-springboot/src/main/java/io/drift/ui/app/page/layout/Menu.html
+++ b/drift-runtime/drift-runtime-springboot/src/main/java/io/drift/ui/app/page/layout/Menu.html
@@ -1,6 +1,7 @@
 <html>
     <wicket:panel>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
