styling system description page, split connections in separate page, set side panel collapsed by default

--- a/drift-runtime/drift-runtime-springboot/src/main/java/io/drift/ui/app/page/layout/MainLayout.html
+++ b/drift-runtime/drift-runtime-springboot/src/main/java/io/drift/ui/app/page/layout/MainLayout.html
@@ -9,13 +9,14 @@
               crossorigin="anonymous">
     </head>
     <body>
-        <div class="d-flex" id="wrapper">
+        <div class="d-flex toggled" id="wrapper">
 
             <!-- Sidebar -->
             <div class="bg-light border-right" id="sidebar-wrapper">
                 <div class="sidebar-heading"></div>
                 <div class="list-group list-group-flush">
-                    <a href="/system" class="list-group-item list-group-item-action bg-light">System</a>
+                    <a href="/system/description" class="list-group-item list-group-item-action bg-light">System Description</a>
+                    <a href="/system/connections" class="list-group-item list-group-item-action bg-light">System Connections</a>
                     <a href="/recordings" class="list-group-item list-group-item-action bg-light">Recordings</a>
                 </div>
             </div>
