move focus caret with left right keys. No changes indicator for db deltas

--- a/drift-runtime/drift-runtime-springboot/src/main/java/io/drift/ui/app/page/layout/MainLayout.html
+++ b/drift-runtime/drift-runtime-springboot/src/main/java/io/drift/ui/app/page/layout/MainLayout.html
@@ -28,6 +28,13 @@
                     <button id="menu-toggle" class="btn" style="outline: none; box-shadow: none;"><i class="fa fa-bars" ></i></button>
                 </nav>
                 <wicket:child/>
+                <!--
+                <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+                    <div class="container text-center">
+                        <small>Copyright &copy; Your Website</small>
+                    </div>
+                </footer>
+                -->
             </div>
         </div>
 
